# ocaml-electron

./: .gitignore  .merlin  README.md  README.org  _oasis  dune-project  electron.opam
examples/: Makefile  dune  index.html  mvp.ml  package.json
opam/: descr  findlib  opam
src/: app.ml  browser_window.ml  clipboard.ml  crash_reporter.ml  dialog.ml  dune  electron.ml  electron_main.ml  electron_renderer.ml  global_shortcut.ml  image.ml  ipc.ml  ipc_main.ml  menu.ml  menu_item.ml  power_monitor.ml  remote.ml  screen.ml  shell.ml  shortcut.ml  tray.ml  web_contents.ml
